application/static/css/styles.css
html, body {
    height: 100%; /* for sticky footer */
}

body {
    display: flex;
    flex-direction: column;
    background-color: var(--colour-1); /* lightened yellow */
}

.pink-body {
    background-color: var(--colour-1);
}

.purple-body {
    background-color: var(--colour-5);
}

a {
    text-decoration: none;
}


/* MOOD MONSTER IMAGES AROUND BORDER */

.page-wrapper {
    position: relative;
    z-index: 0;
    /*min-height: 100vh;*/
}

/* fixes issue with space below monster images */
.spacer-register {
    height: 180px; /* add empty space below registration form */
}

.spacer-login, .spacer-badges {
    height: 585px; /* add empty space below login form */
}

.spacer-mood {
    height: 1010px; /* add empty space to mood diary with no entries */
}

.spacer-mood-entry {
    height: 715px;
}

/* -------------------------------------------- */

.container, .container-fluid {
    position: relative;
    z-index: 1;
}

.monster-image, .monster-image-footer {
    position: absolute;
    width: 20vw;
    height: auto;
    z-index: 2;
}

.text-content {
    position: relative; /* Ensures z-index is effective */
    z-index: 3; /* Highest to ensure it appears above images */
 }

.top-left { top: 0; left: 0; }
.one-third-left { top: 40%; left: 0; transform: translateY(-50%); }
.two-thirds-left { top: 66%; left: 0; transform: translateY(-50%); }
.bottom-left { bottom: 0; left: 0; }

.top-right { top: 0; right: 0; }
.one-third-right { top: 36%; right: 0; transform: translateY(-50%); }
.two-thirds-right { top: 66%; right: 0; transform: translateY(-50%); }
.bottom-right { bottom: 0; right: 0; }

.bottom-center { bottom: 0; left: 41%;}


/* WEBSITE COLOUR SCHEME */

:root {
    --colour-1: #EF476F; /* pink */
    --colour-2: #FFD166; /* yellow */
    --colour-3: #06D6A0; /* green */
    --colour-4: #118AB2; /* blue */
    --colour-5: #6A4C93; /* purple - additional colour */
    --colour-6: #FB5607; /* orange - additional colour */
    --light: #FDFDFF;
    --dark: #073B4C;
    --red: #F04A49;
}

/* ------ TEXT COLOUR CLASSES TO USE IN SPANS ------ */

/* pink text class */
.colour-1 {
    color: var(--colour-1);
}
/* yellow text class */
.colour-2 {
    color: var(--colour-2);
}
/* green text class */
.colour-3 {
    color: var(--colour-3);
}
/* blue text class */
.colour-4 {
    color: var(--colour-4);
}
/* purple text class */
.colour-5 {
    color: var(--colour-5);
}
/* orange text class */
.colour-6 {
    color: var(--colour-6);
}
/* light for text */
.colour-light {
    color: var(--light);
}
/* dark for text */
.colour-dark {
    color: var(--dark);
}
/* red for ANGRY text */
.colour-red {
    color: var(--red);
}

/* ------ GRADIENT BACKGROUNDS ------ */

/* blue/green gradient */
.gradient-colour-1 {
    background: linear-gradient(45deg, var(--colour-4), var(--colour-3));
}

/* purple/blue gradient */
.gradient-colour-2 {
    background: linear-gradient(45deg, #563e77, var(--colour-4)); /* darkened default purple colour for contrast between sections */
}

/* pink/blue gradient */
.gradient-colour-3 {
    background: linear-gradient(45deg, var(--colour-1), var(--colour-6));
}

/* ------ WAVE DIVIDERS ------ */

/* UPDATED wave - size 70px, curvature highest setting */
.wave-bottom {
  --mask:
    radial-gradient(156.52px at 50% calc(100% - 210px),#000 99%,#0000 101%) calc(50% - 140px) 0/280px 100%,
    radial-gradient(156.52px at 50% calc(100% + 140px),#0000 99%,#000 101%) 50% calc(100% - 70px)/280px 100% repeat-x;
  -webkit-mask: var(--mask);
          mask: var(--mask);
}

.wave-top {
  --mask:
    radial-gradient(156.52px at 50% 210px,#000 99%,#0000 101%) calc(50% - 140px) 0/280px 100%,
    radial-gradient(156.52px at 50% -140px,#0000 99%,#000 101%) 50% 70px/280px 100% repeat-x;
  -webkit-mask: var(--mask);
          mask: var(--mask);
}

.wave-top-bottom {
  --mask:
    radial-gradient(156.52px at 50% 210px,#000 99%,#0000 101%) calc(50% - 140px) 0/280px 51% repeat-x,
    radial-gradient(156.52px at 50% -140px,#0000 99%,#000 101%) 50% 70px/280px calc(51% - 70px) repeat-x,
    radial-gradient(156.52px at 50% calc(100% - 210px),#000 99%,#0000 101%) calc(50% - 140px) 100%/280px 51% repeat-x,
    radial-gradient(156.52px at 50% calc(100% + 140px),#0000 99%,#000 101%) 50% calc(100% - 70px)/280px calc(51% - 70px) repeat-x;
  -webkit-mask: var(--mask);
          mask: var(--mask);
}


/* ------ FONTS ------ */

.monster-text {
    padding: 0 5px;
    font-size: 1rem;
}

h1 {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Bungee", sans-serif;
    font-weight: 400;
    font-style: normal;
}

p, a, .entry {
    font-family: "Baloo 2", sans-serif;
    font-weight: 400;
    font-style: normal;
    font-size: 1.5rem;
    color: var(--light);
}

.titles {
    text-transform: uppercase;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
}


/* ------ NAVBAR (& FOOTER) ------ */

.navbar-custom, footer {
    background-color: var(--dark);
    font-size: 16px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
    position: relative; /* Set position to relative */
    z-index: 1000; /* Set a high z-index to bring it to the front */
}

.navbar-custom .navbar-nav {
    flex-direction: row;
    align-items: center;
}

.navbar-nav .nav-link + .nav-link::before {
    content: "|";
    padding: 0 30px 0 25px;
}

footer p {
    color: var(--light);
    font-size: 16px;
}

a.nav-link {
    color: var(--light) !important;
}


/* ------ BUTTONS ------ */

.center-button {
    display: flex;
    justify-content: center; /* Aligns horizontally */
    width: 100%; /* Takes full width of the parent */
}

.fixed-width {
    width: 180px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
}

.fixed-width-wide {
    width: 270px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
}
/* ... */

